# xobjects

./: .gitignore  .pre-commit-config.yaml  Architecture.md  MANIFEST.in  README.md  Readme.md  contributors_and_credits.txt  mktest  pyproject.toml  requirements.txt  setup.cfg  setup.py  track_ex.py  update_copyright_statement.py  update_cprght_statement.py
.github/workflows/: black.yml
docs/: architecture.rst  conf.py  index.rst  reference.rst
docs/architecture/: contexts.rst  types.rst
examples/: api_def.py  api_init.py  capi_example.c  check_assembly.c  ex_array_init_perf.py  ex_cpugpu.py  ex_nested_ref.py  ex_ref_cpu.py  ex_struct_cpu.py  ex_unionref.py  ex_unionref_cpu.py  ex_unionref_method.py  init_soa.py  issue_with_two_pyopencl_contexts.py  opencl_offsets.py  simple_kernel.py  sixtracklib.py  solve_sparse_system.py  time_instance.py
examples/kernel_basics/: 000_cffi.py  001_cupy.py  002_pyopencl.py  cffi.py  kernel_cffi.py  kernel_cupy.py  kernel_pyopencl.py  pyopencl.py
tests/: __init__.py  notest_capi.py  test_align.py  test_array.py  test_buffer.py  test_capi.py  test_chunk.py  test_common.py  test_context.py  test_context_opencl.py  test_cupy_context.py  test_dress.py  test_ffts.py  test_hybrid_class.py  test_kernel.py  test_kernel2.py  test_linked_array.py  test_nplike_arrays.py  test_ref.py  test_scalar.py  test_scalars.py  test_shared_memory.py  test_sparse_solvers.py  test_special.py  test_strides.py  test_string.py  test_struct.py  test_to_dict.py  test_to_json.py  test_typeutils.py  test_unionref.py
xobjects/: __init__.py  _patch_pyopencl_array.py  array.py  base_type.py  capi.py  context.py  context_cpu.py  context_cupy.py  context_pyopencl.py  dress.py  dressed_struct.py  general.py  hybrid_class.py  linkedarray.py  methods.py  ref.py  scalar.py  scalar_notgood.py  sparse.py  specialize_source.py  string.py  struct.py  test_helpers.py  topological_sort.py  typeutils.py  union.py  unionref.py  xoclass.py
xobjects/SparseSolvers/: abstract_solver.py
xobjects/context/: __init__.py  _patch_pyopencl_array.py  base.py  context_cpu.py  context_cupy.py  context_pyopencl.py  cpu.py  cu_py.py  general.py  py_opencl.py  specialize_source.py
xobjects/headers/: atomicadd.h  common.h
xobjects/kernels/: ocl_copy_array_fcont.h
xobjects/sparse/: __init__.py  _sparse.py  _test_helpers.py  sparse.py
(+8 files in other folders)
